--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
             min-height: 0;
             min-width: 0;
             width: 100%;
+            display: flex;
+            justify-content: space-evenly;
         }
 
         .map-wrapper {
@@ -53,6 +55,14 @@
             background-color: rgb(188, 223, 174);
             border-color: rgb(131, 170, 131);
         }
+
+        .actions-wrapper {
+            margin-top: 64px;
+        }
+
+        .restart-btn {
+            padding: 12px 16px;
+        }
     </style>
 </head>
 
@@ -60,6 +70,10 @@
     <script src="https://unpkg.com/vue@3"></script>
 
     <div id="app">
+        <div class="actions-wrapper">
+            <button class="restart-btn" @click="restart">Restart</button>
+        </div>
+
         <div class="map-wrapper">
             <div v-for="(row, xIndex) in map" :key="xIndex" class="row">
                 <div v-for="(tile, yIndex) in row"
@@ -205,6 +219,13 @@
 
                 toggleFlag(tile) {
                     tile.flag = (tile.flag + 1) % 3
+                },
+
+                restart() {
+                    this.map = []
+                    this.bombPositions = []
+
+                    this.initMap()
                 }
             },
 
