--- a/index.html
+++ b/index.html
@@ -24,15 +24,19 @@
             min-width: 0;
             width: 100%;
             display: flex;
-            justify-content: space-evenly;
+            justify-content: center;
+        }
+
+        #app {
+            padding-top: 20px;
         }
 
         .map-wrapper {
+            position: relative;
             align-items: center;
             display: flex;
             flex-direction: column;
             height: 100%;
-            justify-content: center;
         }
 
         .row {
@@ -57,11 +61,35 @@
         }
 
         .actions-wrapper {
-            margin-top: 64px;
+            width: 150px;
         }
 
         .restart-btn {
             padding: 12px 16px;
+            font-size: 25px;
+            font-weight: 700;
+            color: gray;
+            text-decoration: underline;
+            cursor: pointer;
+        }
+
+        .gameover-layer {
+            position: absolute;
+            inset: 0;
+            backdrop-filter: blur(2px);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 50px;
+            font-weight: 700;
+        }
+
+        .gameover-layer.have-lost {
+            background-color: rgba(200, 0, 0, 0.3);
+        }
+
+        .gameover-layer.have-won {
+            background-color: rgba(0, 200, 0, 0.3);
         }
     </style>
 </head>
@@ -71,7 +99,7 @@
 
     <div id="app">
         <div class="actions-wrapper">
-            <button class="restart-btn" @click="restart">Restart</button>
+            <span class="restart-btn" @click="restart">Restart</span>
         </div>
 
         <div class="map-wrapper">
@@ -85,7 +113,13 @@
                     {{ tile.displayValue() }}
                 </div>
             </div>
+
+            <div v-if="gameover" class="gameover-layer" :class="[ haveWon ? 'have-won' : 'have-lost' ]">
+                {{ haveWon ? 'You\'re a WINNER!' : 'You LOST You IDIOT!' }}
+            </div>
         </div>
+
+        <div style="width: 150px;"></div>
     </div>
 
 
@@ -106,7 +140,11 @@
                         yLength: 9,
                     },
 
-                    bombPositions: []
+                    bombPositions: [],
+
+                    gameover: false,
+
+                    haveWon: false
                 }
             },
 
@@ -160,12 +198,14 @@
                 select(x, y) {
                     const selectedTile = this.map[x][y]
 
-                    if (selectedTile.flag === 0) {
+                    if (selectedTile.flag === 0 && !this.gameover) {
                         if (selectedTile.value === BOMB) {
                             this.revealBombs()
                         } else {
                             this.revealTile(selectedTile, { x: x, y: y })
                         }
+
+                        this.isWinner()
                     }
                 },
 
@@ -173,6 +213,9 @@
                     this.bombPositions.forEach(bomb => {
                         this.map[bomb.x][bomb.y].visible = true
                     })
+
+                    this.gameover = true
+                    this.haveWon = false
                 },
 
                 revealTile(tile, position) {
@@ -218,14 +261,34 @@
                 },
 
                 toggleFlag(tile) {
-                    tile.flag = (tile.flag + 1) % 3
+                    if (!this.gameover) {
+                        tile.flag = (tile.flag + 1) % 3
+                    }
                 },
 
                 restart() {
+                    this.gameover = false
                     this.map = []
                     this.bombPositions = []
 
                     this.initMap()
+                },
+
+                isWinner() {
+                    const haveWon = true;
+
+                    this.map.forEach(
+                        (rows) => rows.forEach(
+                            (tile) => {
+                                if (!tile.visible && tile.value !== BOMB) {
+                                    haveWon = false
+                                }
+                            }
+                        )
+                    )
+
+                    this.haveWon = haveWon
+                    this.gameover = true    
                 }
             },
 
